<?xml version="1.0" encoding="utf-8"?>
<resources>
        <string name="app_name">BeHe ExploreR</string>
        <string name="go">Search</string>
        <string name="bookmarksshow">Show bookmarks</string>
        <string name="action_history">History</string>
        <string name="historyclear">Clear history</string>
        <string name="action_tabs">Tabs</string>
        <string name="action_settings">Settings</string>
        <string name="credits">Credits</string>
        <string name="desktop">Desktop version</string>
        <string name="action_incognito">Incognito</string>
        <string name="action_added">Added</string>
        <string name="action_see">See</string>
        <string name="historytast">History cleared</string>
        <string name="delete_dialog_title">Delete bookmark?</string>
        <string name="delete_dialog_content">Are you sure you want to delete this bookmark?</string>
        <string name="boomarks">Bookmarks</string>
        <string name="home">Home</string>
        <string name="look">Look</string>
        <string name="looksummary">Customize browser look</string>
        <string name="browser">Browser</string>
        <string name="theme">Theme</string>
        <string name="themesummary">Choose browser theme</string>
        <string name="text">Text size</string>
        <string name="textsummary">Choose browser text size</string>
        <string name="search_engine">Choose search engine</string>
        <string name="java">Enable JavaScript</string>
        <string name="javasummary">Will enable JavaScript in browser</string>
        <string name="plugins">Enable plugins</string>
        <string name="plugins_summary">Will enable plugins in browser</string>
        <string name="cache">Enable cache storage</string>
        <string name="startpage">Start page</string>
        <string name="startpagesummary">Choose the page that will be shown at browser startup</string>
        <string name="about">About</string>
        <string name="notes">Version 2.0.1</string>
        <string name="startpagedialog">Enter the URL of your desired start page</string>
        <string name="bookmark_dialog">Type the name of your bookmark</string>
        <string name="version">Version</string>
        <string name="stop">Stop</string>
        <string name="download">Do you want to download: </string>
        <string name="cancel">Cancel</string>
        <string name="ok">OK</string>
        <string name="license_about">Licensed under Apache License v2.0</string>
        <string name="license">Licence</string>
        <string name="github">See on GitHub</string>
        <string name="delete">Delete</string>
        <string name="press_to_quit">Press again to quit</string>
        <string name="picture">Change drawer picture</string>
        <string name="see_picture">View image</string>
        <string name="download_picture">Download image</string>
        <string name="save_link">Copy link</string>
        <string name="share">Share</string>
        <string name="lock">Lock right navigation drawer</string>
        <string name="find">Find text</string>
        <string name="action_find">Find in page</string>
    <string-array name="color">
    <item name = "1">White</item>
    <item name ="2">Grey</item>
    <item name ="3">Red</item>
    <item name="4">Blue</item>
    <item name="5">Green</item>
    </string-array>
    <string-array name="color_values">
    <item name="1">#FFFFFF</item>
    <item name="2">#A9A9A9</item>
    <item name="3">#FF0000</item>
    <item name="4">#0000FF</item>
    <item name="5">#008000</item>
    </string-array>
    <string-array name="text">
    <item name = "1">Small</item>
    <item name ="2">Normal</item>
    <item name ="3">Large</item>
    <item name="4">Extra large</item>
    </string-array>
    <string-array name="text_size">
    <item name="1">14</item>
    <item name="2">18</item>
    <item name="3">22</item>
    <item name="4">24</item>
    </string-array>
    <string-array name="search">
        <item name = "1">Google</item>
        <item name ="2">Bing</item>
        <item name ="3">Yahoo</item>
        <item name="4">Duckduckgo</item>
        <item name="5">Ask</item>
        <item name="6">Wow</item>
    </string-array>
    <string-array name="search_values">
        <item name = "1">1</item>
        <item name ="2">2</item>
        <item name ="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
    </string-array>
    <string-array name="home_page">
        <item name = "default">Default</item>
        <item name ="custom">Custom</item>
    </string-array>
    <string-array name="home_page_values">
        <item name = "1">default</item>
        <item name ="2">custom</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>


   
